--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ espressoCore = "3.7.0"
 lifecycleRuntimeKtx = "2.10.0"
 activityCompose = "1.12.1"
 composeBom = "2026.01.00"
-ksp = "2.2.20-2.0.3" # "kotlinVersion-kspVersion"
+ksp = "2.3.5"
 hiltAndroid = "2.59"
 accompanistPermissions = "0.36.0"
 hiltNavigationCompose = "1.3.0"
